--- a/jsframeworks/css/master.css
+++ b/jsframeworks/css/master.css
@@ -1,24 +1,23 @@
 .logo{
   height: 200px;
-  width: auto;
+overflow: visible;
   float: left;
 }
 .sectorC{
   height: 100px;
-  width: auto;
+overflow: visible;
 }
 .defectuosoC{
   height: 100px;
-  width: auto;
+overflow: visible;
 }
 .st0{
-  fill:none;
+  fill:white;
   stroke:#000000;
   stroke-miterlimit:10;
 }
 svg.relativo{
-  position: relative;
-  display: inline;
+
   margin: auto
 }
 .centrarlogo{
