--- a/jsframeworks/css/master.css
+++ b/jsframeworks/css/master.css
@@ -25,7 +25,7 @@ svg.relativo{
 }
 .centrarlogo{
 	text-align: center;
-
+	position: absolute;
 	width: 680px;
 }
 
@@ -42,4 +42,10 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction:row;
+}
+canvas {
+  display: block;
+  width: 100vw;
+  height: 100vh;
+  cursor: pointer; 
 }
