--- a/jsframeworks/css/master.css
+++ b/jsframeworks/css/master.css
@@ -30,7 +30,7 @@ svg.relativo{
 }
 
 html, body {
-  background-color: #333;
+  background-color: #fff;
   width: 100%;
   height: 100%;
   margin: 0;
