--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     <h2 class="footer-heading">{{ site.title | escape }}</h2>
     <p><a href="/acerca-del-autor/">El Autor</a> •
        <a href="/acerca-del-sitio/">El Sitio</a> •
-       <a href="/microblog">Microblog</a> •
+       <a href="/microblog/">Microblog</a> •
        <a href="/categorias/">Categorías</a> •
        <a href="/etiquetas/">Etiquetas</a>
      </p>
