--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,16 +2,14 @@
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
   <div class="wrapper center">
-
-    <h2 class="footer-heading">{{ site.title | escape }}</h2>
-    <p><a href="/acerca-del-autor/">El Autor</a> •
-       <a href="/acerca-del-sitio/">El Sitio</a> •
-       <a href="/microblog/">Microblog</a> •
-       <a href="/categorias/">Categorías</a> •
-       <a href="/etiquetas/">Etiquetas</a>
+    <p><a href="/acerca-del-autor/">El Autor</a> ▪
+       <a href="/acerca-del-sitio/">El Sitio</a> ▪
+       <a href="/microblog/">Microblog</a> ▪
+       <a href="/categorias/">Categorías</a> ▪
+       <a href="/etiquetas/">Etiquetas</a> ▪
+       <a href="/archivo/">Archivo</a>
      </p>
     <p>© 2009 - 2018 Sector Defectuoso</p>
-
   </div>
 
 </footer>
