--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ comments: true
         <span class="icon">{% include icon-date.svg %}</span>
         {{ page.date | date: "%d/%m/%Y" }}
         &nbsp;<span class="icon">{% include icon-time.svg %}</span>
-        {{ page.date | date: "%H:%M" }}
+        {{ page.date | date: "%r" }}
       </time>
       &nbsp;<span class="icon">{% include icon-word.svg %}</span>
       {{ page.content | strip_html | number_of_words }} palabras
@@ -38,7 +38,7 @@ comments: true
         {% if forloop.first == true %}&nbsp;
           <span class="icon">{% include icon-tag.svg %}</span>
         {% endif %}
-        <a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag | slugify:'latin' }}">{{ tag | replace: " ","+" }}</a>
+        <a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag | slugify:'latin' }}">{{ tag }}</a>
         {%- if forloop.last == false -%},{% endif %}
       {% endfor %}
     {% endif %}
