--- a/assets/main.scss
+++ b/assets/main.scss
@@ -49,7 +49,7 @@ img.right{
 }
 .site-header img{
   display: block;
-  margin: 0px auto 20px auto;
+  margin: 0px auto;
 }
 body{
   background: #eee url("/assets/images/fondo.gif");
